Ticket: #FT-148 FT-116 SubTicket: # Component: Changes: 1.Fixed Bug - navigation item not selected on mobile. 2.update mobile version.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
@@ -1224,7 +1224,11 @@
 							}
 
 							&.result {
+								background-color: #f2f2f2;
 								.search-result {
+									.virtual-content {
+										width: 100%;
+									}
 									.no-result {
 										color: #ffffff;
 
